--- a/node-coding/package.json
+++ b/node-coding/package.json
@@ -17,7 +17,9 @@
     "cache-storage": "^2.0.1",
     "clui": "^0.3.1",
     "debug": "^2.2.0",
-    "nedb": "^1.2.1",
     "slumber": "^0.7.0"
+  },
+  "devDependencies": {
+    "lodash": "^3.10.1"
   }
 }
