--- a/node-coding/package.json
+++ b/node-coding/package.json
@@ -4,7 +4,7 @@
   "description": "Coding.net API Nodejs library.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests"
+    "test": "./node_modules/.bin/mocha tests"
   },
   "keywords": [
     "api",
@@ -15,8 +15,14 @@
   "license": "MIT",
   "dependencies": {
     "cache-storage": "^2.0.1",
+    "chai": "^3.4.0",
     "clui": "^0.3.1",
+    "coffee-script": "^1.10.0",
     "debug": "^2.2.0",
+    "mocha": "^2.3.3",
+    "proxyquire": "^1.7.3",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
     "slumber": "^0.7.0"
   },
   "devDependencies": {
