完成部分单元测试 . ├── Blobs.test.coffee ├── Branchs.test.coffee ├── Commits.test.coffee ├── Depots.test.coffee ├── Files.test.coffee ├── Historys.test.coffee ├── Keys.test.coffee ├── Merge_requests.test.coffee └── OAuth.test.coffee
1) Depots forks() 项目被fork的列表:
 Uncaught AssertionError: expected Object { oauth_user_scope_error: '当前的 scope 不支持访问此 API' } to not exist

2) Depots importRepo() 导入仓库:
 Error: the string "未设定参数" was thrown, throw an Error :)

3) Depots initDepot() 初始化仓库:
 Error: the string "未设定参数" was thrown, throw an Error :)

4) Files mkdir() 创建文件夹:
 Uncaught AssertionError: expected Object { oauth_user_scope_error: '当前的 scope 不支持访问此 API' } to not exist

5) Files createFile() 创建文件:
 Uncaught AssertionError: expected Object { oauth_user_scope_error: '当前的 scope 不支持访问此 API' } to not exist

6) Files checkExisted() 检查目录下是否有同名的文件:
 Uncaught AssertionError: expected Object { oauth_user_scope_error: '当前的 scope 不支持访问此 API' } to not exist

7) Files uploadFileHistory() 上传文件新版本:
 Uncaught AssertionError: expected Object { oauth_user_scope_error: '当前的 scope 不支持访问此 API' } to not exist

8) Files downloadHistory() 下载历史文件版本:
 ReferenceError: id is not defined
  at Context.<anonymous> (test/Files.test.js:106:60)

9) Files uploadFile() 上传私有项目的图片:
 Uncaught AssertionError: expected Object { oauth_user_scope_error: '当前的 scope 不支持访问此 API' } to not exist

10) Files downloadFile() 文件下载:
 Uncaught AssertionError: expected Object { oauth_user_scope_error: '当前的 scope 不支持访问此 API' } to not exist

11) Files downloadURL() 文件下载URL:
 Uncaught AssertionError: expected Object { oauth_user_scope_error: '当前的 scope 不支持访问此 API' } to not exist

12) Files editFile() 编辑文件:
 Uncaught AssertionError: expected Object { oauth_user_scope_error: '当前的 scope 不支持访问此 API' } to not exist

13) Files viewFile() 查看文件:
 Uncaught AssertionError: expected Object { oauth_user_scope_error: '当前的 scope 不支持访问此 API' } to not exist

14) Files imagePreview() 图片预览:
 Uncaught AssertionError: expected Object { oauth_user_scope_err

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Coding.net API Nodejs library.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "coffee -c --no-header -o test test; ./node_modules/.bin/mocha test"
+    "test": "coffee -c --no-header -o test test; ./node_modules/.bin/mocha test; rm test/*.js"
   },
   "keywords": [
     "api",
@@ -17,6 +17,7 @@
     "cache-storage": "^2.0.1",
     "clui": "^0.3.1",
     "debug": "^2.2.0",
+    "faker": "^3.0.1",
     "slumber": "^0.7.0"
   },
   "devDependencies": {
