--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clui": "^0.3.1",
     "debug": "^2.2.0",
     "faker": "^3.0.1",
+    "server-destroy": "^1.0.1",
     "slumber": "^0.7.0"
   },
   "devDependencies": {
