--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Coding.net API Nodejs library.",
   "main": "lib/index.js",
   "scripts": {
-    "build":"coffee -o lib src",
+    "build": "coffee -o lib src",
     "test": "coffee -c --no-header -o test test; ./node_modules/.bin/mocha test; rm test/*.js"
   },
   "keywords": [
@@ -20,7 +20,9 @@
     "debug": "^2.2.0",
     "faker": "^3.0.1",
     "server-destroy": "^1.0.1",
-    "slumber": "^0.7.0"
+    "slumber": "^0.7.0",
+    "superagent": "^1.4.0",
+    "superagent-prefix": "0.0.2"
   },
   "devDependencies": {
     "chai": "^3.4.0",
