--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clui": "^0.3.1",
     "debug": "^2.2.0",
     "faker": "^3.0.1",
+    "request": "^2.65.0",
     "server-destroy": "^1.0.1",
     "slumber": "^0.7.0",
     "superagent": "^1.4.0",
